# GroceriesInsight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/ObjectSavingFramework/: .gitignore  CMakeLists.txt  README.md
lib/ObjectSavingFramework/example/: Examples.cpp
lib/ObjectSavingFramework/include/: ConsoleMapper.h  DataGatherer.h  DataMapper.h  JsonMapper.h  Node.h  XmlMapper.h
lib/ObjectSavingFramework/src/: ConsoleMapper.cpp  DataGatherer.cpp  DataMapper.h  JsonMapper.cpp  Node.h  XmlMapper.cpp
lib/googletest/: .gitignore  CMakeLists.txt
src/: UnitSize.cpp  UnitSize.hpp  console.cpp  main.cpp  product.cpp  product.h  productservice.cpp  productservice.h  transaction.cpp  transaction.h  transactioncomparator.h  transactionservice.cpp  transactionservice.h
src/ui/console/: addproductpage.h  addtransactionpage.h  alltransactionspage.h  console.h  consolepage.cpp  consolepage.h  expenditurehistorypage.h  mainmenu.h  producthistorypage.h  searchproductpage.h
test/: product.cpp  productservice.cpp  productservicetest.cpp  producttest.cpp  transactionservicetest.cpp  transactiontest.cpp
